--- a/style.css
+++ b/style.css
@@ -1,198 +1,886 @@
+
+
 *{
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    text-decoration: none;
+    padding: 0 !important;
+    margin: 0 !important;
     box-sizing: border-box;
-    /* border: 1px solid #000; */
+    text-decoration: none;
 }
-.container-section{
-    height: 127vh;
+
+:root{
+    /* Color */
+    --blue: #000077;
+    --light-blue: #00007709;
+    --white: #dededa;
 }
-.container-one{
-    height: 92%;
-    width: 80% !important;
-    box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.3),0 6px 20px 0 rgba(0, 0, 0, 0.3);
-    overflow: hidden;
+
+main{
+
+    width: 100%;
+    height: 100vh;
+    display: flex;
+
 }
-form{
-    min-width: 238px;
-    width: 40%;
+
+.main{
+    height: 100vh;
+    overflow-y: auto;
 }
-form.signin-form{
-    opacity: 1;
-    transition: 0.5s ease-in-out;
-    transition-delay: 1s;
+
+main .side-bar{
+    width: 20%;
 }
-form.signup-form{
-    opacity: 0;
-    transition: 0.5s ease-in-out;
-    transition-delay: 1s;
+
+main .main{
+    background-color: var(--light-blue);
+    width: 80%;
 }
-.input-field{
-    background: #fff;
-    cursor: pointer;
-    /* border: 1px solid #000; */
+
+
+.side-bar {
+    display: flex;
+    flex-direction: column;
+    padding: 40px  !important;
+    justify-content: space-between;
 }
-input,select{
-    background: transparent;
-    border: 0;
-    outline: 0;
+
+.side-bar .top{
+    color: var(--blue);
 }
-label{
-    color: #a08c8c;
+
+ul{
+    list-style-type: none;
 }
-.btn{
-    background: #000077;
+
+ul li{
+    padding: 10px 15px !important;
+    font-size: 14px;
+    border-radius: 10px ;
+    margin-top: 10px !important;
+}
+
+ul li:hover{
+    background: var(--blue);
+    transition: .3s;
+}
+
+ul li:hover a{
     color: #fff;
 }
-.btn:hover{
-    background: #fff !important;
-    color: #000077 !important;
-}
-.social-media{
-    cursor: pointer;
-}
-.fa-coins{
-    color: #000077;
+
+ul li i{
+    margin-right: 15px !important;
+
 }
 
-.container-one::before{
-    content: "";
-    position: absolute;
-    top: 0;
-    left: -50%;
-    height: 100%;
+ul li a{
+    text-decoration: none;
+    color: grey;
+
+}
+
+ul .active {
+    background: var(--blue);
+    color: #fff;
+}
+
+ul .active a{
+    color: white;
+}
+
+
+/* Bottom */
+.bottom .setting a, .bottom .sign-out a{
+    display: flex;
+    gap: 15px;
+    align-items: center;
+    color: grey;
+    transition: .3s;
+    text-decoration: none;
+}
+
+
+
+.setting a:hover{
+    color: black;
+}
+
+.bottom .setting i{
+    color: black;
+}
+.bottom .sign-out i{
+    color: orangered;
+}
+
+.sign-out a:hover{
+    color: orangered;
+}
+
+
+
+
+/* Navbar */
+nav{
     width: 100%;
-    background: linear-gradient(-45deg,#000077,#007777);
-    z-index: 6;
-    transform: translate(100%);
-    transition: 1s ease-in-out;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 80px !important;
+    box-shadow: 1px 1px 5px #0000773a;
 }
-.container-one.sign-up-mode::before{
-    transform: translateX(0);
+
+nav .greeting{
+    display: flex;
+    gap: 10px;
+    align-items: center;
 }
-.signin-signup-container{
-    z-index: 5;
+
+nav img{
+    width: 50px;
+    border-radius: 50%;
 }
-.panels-container{
-    position: absolute;
-    top: 0;
-    left: 0;
+
+nav .profiles, .profile{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+nav i{
+    margin-right: 10px;
+}
+
+
+
+/* Center */
+.center{
     width: 100%;
-    height: 100%;
-}
-.panel{
-    z-index: 6;
-    width: 15%;
-    min-width: 238px;
-
-}
-.image{
-    transition: 1.1s ease-in-out;
-    transition-delay: .2s;
+    padding: 40px 80px !important;
+    gap: 30px;
 }
 
-.left-panel{
-    pointer-events: all;
-}
-.content{
-    transition: 1.1s ease-in-out;
-    transition-delay: .2s;
-}
-/* ANIMATION */
-.left-panel .content,.left-panel .image{
-    transform: translate(-220%);
-}
-.right-panel .content,.right-panel .image{
-    transform: translate(0);
+.more{
+    display: flex;
+    gap: 30px;
 }
 
-.container-one.sign-up-mode .right-panel .image,.container-one.sign-up-mode .right-panel .content{
-    transform: translate(220%);
-}
-.container-one.sign-up-mode .left-panel .image,.container-one.sign-up-mode .left-panel .content{
-    transform: translate(0);
-}
-.container-one.container-one.sign-up-mode form.signin-form{
-    opacity: 0;
+.right{
+    width: 40%;
 }
 
-.container-one.container-one.sign-up-mode form.signup-form{
-    opacity: 1;
+.left{
+    width: 60%;
 }
 
-.container.sign-up-mode .right-panel{
-    pointer-events: none;
+.cards{
+    width: 100%;
+    display: flex;
+    gap: 40px;
+    overflow: auto;
 }
-.container.sign-up-mode .left-panel{
-    pointer-events: all;
+
+.cards::-webkit-scrollbar{
+    width: 2px ;
+    background-color: black;
 }
-.account-text{
+
+.cards::-webkit-scrollbar-thumb{
+    width: 100%;
+    background-color: #fff;
+}
+
+.head-card{
+    background: linear-gradient(to top right, #000077 10%, #000077a6 );
+    min-width: 300px;
+    max-height: 150px;
+    border-radius: 20px;
+    padding: 20px !important;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    color: #fff;
+}
+
+.head-card2{
+    /* background: #fff; */
+    width: 100%;
+    overflow: auto;
+    padding: 10px 20px !important;
+    /* border-radius: 20px; */
+}
+
+.head-card2::-webkit-scrollbar{
+    width: 0;
+}
+
+
+.new-card{
+    min-width: 250px;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    background: linear-gradient(to top right, #000077 10%, #000077a6 );
+    border-radius: 10px;
+    color: #fff;
+    padding: 10px !important;
+}
+
+.card-details i{
+    font-size: 20px;
+}
+
+
+.bottom-navbar{
     display: none;
 }
 
-/* RESPONSIVENESS */
-
-@media (max-width:1024px) {
-    .container-section{
-        height: 100vh !important;
-    }
-    .container-one{
-        height: 70% !important;
-        width: 80% !important;
-    }
-    .image img{
-        width: 100%;
-    }
+.atm-card{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-size: 16px;
+    position: relative;
+    background: url(img/360_F_395046410_zPvTifXj16lprkYLFSN5Yeweaquzc4CR-removebg-preview.png);
+    background-size: cover;
+    background-position: center;
 }
 
-@media (max-width:779px) {
-    .container-section{
-        height: 110vh !important;
+.atm-card2{
+    background: url(img/yellow-credit-card-template-black-concrete-background-3d-illustration_118047-11547-removebg-preview.png);
+}
+
+.atm-card3{
+    background: url(img/white-blank-plastic-credit-card-isolated-on-white-background-3d-illustration-2C4G4XJ-removebg-preview.png);
+    background-position: left;
+    background-size: cover;
+    color: #333;
+}
+
+
+
+
+
+.holder-details p{
+    font-weight: 600;
+}
+
+.holder-details small{
+    font-weight: 200;
+}
+
+.add-card{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+    place-items: center;
+}
+
+
+
+
+.more{
+    width: 100%;
+}
+
+.left{
+    width: 60%;
+}
+
+.right{
+    width: 40%;
+}
+
+.activities{
+    width: 100%;
+    padding: 20px !important;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 20px;
+}
+
+.activity{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    background-color: #fff;
+    box-shadow: 1px 1px 2px 3px #dededa;
+    padding: 15px  !important;
+    border-radius: 10px;
+}
+
+.activity i{
+    color: var(--blue);
+}
+
+.activity {
+    color: #333;
+}
+
+
+
+
+
+
+
+
+/* Recent */
+.recent{
+    margin-top: 30px;
+  }
+
+  .recent h3{
+    margin-bottom: 15px;
+  }
+
+  .recent .transactions{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 10px !important;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 1px 1px 2px #dededa;
+    height: 280px;
+    overflow-y: hidden;
+  }
+
+  .transactions::-webkit-scrollbar{
+    width: 0;
+  }
+
+  .transactions .transaction{
+    font-size: 14px;
+  }
+
+  .transaction small{
+    font-size: 12px;
+    color: #aaabae;
+  }
+
+  .transaction{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+  }
+
+ .transaction-head{
+    border-bottom: 1px solid #dededa;
+    font-weight: 600px;
+ }
+
+ .t2{
+    padding: 10px !important;
+    box-shadow: 1px 1px 3px #aaabae;
+    border-radius: 10px;
+ }
+
+
+
+
+  .crypto-widget{
+    width: 100%;
+    overflow-x: scroll;
+  }
+
+
+
+
+
+
+  /* My cards */
+  .sets{
+    width: 50%;
+  }
+  .set{
+    padding: 10px 15px !important;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 1px 1px 3px #dededa;
+    margin-bottom: 15px !important;
+  }
+
+  .sets div i{
+    color: var(--blue);
+  }
+
+
+  /* To hide the checkbox */
+#checkboxInput1,#checkboxInput2,#checkboxInput3,#checkboxInput4, #checkboxInput5 {
+    display: none;
+  }
+  
+  .toggleSwitch {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 50px;
+    height: 30px;
+    background-color: rgb(82, 82, 82);
+    border-radius: 20px;
+    cursor: pointer;
+    transition-duration: .2s;
+  }
+  
+  .toggleSwitch::after {
+    content: "";
+    position: absolute;
+    height: 15px;
+    width: 15px;
+    left: 5px;
+    background-color: transparent;
+    border-radius: 50%;
+    transition-duration: .2s;
+    box-shadow: 5px 2px 7px rgba(8, 8, 8, 0.26);
+    border: 5px solid white;
+  }
+  
+  #checkboxInput1:checked+.toggleSwitch::after {
+    transform: translateX(150%);
+    transition-duration: .2s;
+    background-color: white;
+  }
+  /* Switch background change */
+  #checkboxInput1:checked+.toggleSwitch {
+    background-color: var(--blue);
+    transition-duration: .2s;
+  }
+  
+  #checkboxInput2:checked+.toggleSwitch::after {
+    transform: translateX(150%);
+    transition-duration: .2s;
+    background-color: white;
+  }
+  /* Switch background change */
+  #checkboxInput2:checked+.toggleSwitch {
+    background-color: var(--blue);
+    transition-duration: .2s;
+  }
+  
+  #checkboxInput3:checked+.toggleSwitch::after {
+    transform: translateX(150%);
+    transition-duration: .2s;
+    background-color: white;
+  }
+  /* Switch background change */
+  #checkboxInput3:checked+.toggleSwitch {
+    background-color: var(--blue);
+    transition-duration: .2s;
+  }
+
+  #checkboxInput4:checked+.toggleSwitch::after {
+    transform: translateX(150%);
+    transition-duration: .2s;
+    background-color: white;
+  }
+  /* Switch background change */
+  #checkboxInput4:checked+.toggleSwitch {
+    background-color: var(--blue);
+    transition-duration: .2s;
+  }
+
+  #checkboxInput5:checked+.toggleSwitch::after {
+    transform: translateX(150%);
+    transition-duration: .2s;
+    background-color: white;
+  }
+  /* Switch background change */
+  #checkboxInput5:checked+.toggleSwitch {
+    background-color: var(--blue);
+    transition-duration: .2s;
+  }
+
+  .moveToLeft {
+    left: 5px;
+}
+
+
+
+  /* Add Card Container */
+
+  .main{
+    position: relative;
+  }
+  .add-card{
+    position: absolute;
+    top: 20%;
+    left: 0;
+    right: 0;
+    background: #fff;
+    height: 100vh;
+  }
+
+
+  .add-card .new-card{
+    width: 250px;
+  }
+
+
+  .add-card input{
+  }
+  
+  .add-card form{
+    width: 100%;
+    /* background-color: #fff; */
+    padding: 15px !important;
+  }
+
+  .add-card form input{
+    width: 100%;
+    border: 1px solid #0000773a;
+    outline: #0000773a;
+    margin-top: 10px !important;
+    border-radius: 10px;
+    box-shadow: 1px 1px 3px #dededa;
+    padding: 10px !important;
+  }
+
+
+
+
+  .bottom-navbar{
+    z-index: 1000000;
+  }
+
+
+
+  /* Profiles */
+  .p-balance .p-buttons a{
+    background-color: var(--blue);
+    color: #fff;
+  }
+
+  .p-balance{
+    border-radius: 15px ;
+  }
+
+  .details-container,.levels-container{
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    border-radius: 15px;
+  }
+
+  .details-container .col-6, .levels-container .col-6{
+    padding: 10px !important;
+    border-bottom: 1px solid var(--light-blue);
+    overflow: hidden;
+  }
+
+  /* Modal */
+.modal-dialog{
+    margin: auto !important;
+    margin-top: 50px !important;
+}  
+
+.modal-content{
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    padding: 20px !important;
+}
+
+.modal-body{
+    padding: 20px 0 !important;
+}
+
+
+.modal-content .details-container{
+    border: none;
+    box-shadow: none;
+}
+
+
+
+.modal-content input[type="text"],.modal-content input[type="number"]
+,.modal-content input[type="date"],
+.modal-content input[type="email"],
+.modal-content input[type="select"]{
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    background: #dededa49;
+    padding: 5px 10px !important;
+}
+
+.modal-body form input::placeholder{
+    font-size: 12px ;
+}
+
+.bank  .bank-icon{
+    width: 35px;
+    height: 35px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    place-items: center;
+    background-color: #000077;
+    font-size: 12px;
+    border-radius: 50%;
+}
+
+/* Transaction Page */
+
+
+
+.transaction-container{
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    border-radius: 15px;
+    background-color: #f8f8ff;
+    padding: 20px !important;
+}
+
+.transaction-container .success-text{
+    background-color: #1987540c;
+}
+.transaction-container .text-warning{
+    background-color: #ffc10717;
+}
+.transaction-container .danger-text{
+    background-color: #dc354617;
+}
+
+.transaction-container .text{
+    width: 40% !important;
+    text-align: center;
+}
+
+
+
+/* Settings */
+
+
+.accordion-item button{
+    padding: 15px !important;
+}
+
+.accordion-body{
+    padding: 15px !important;
+}
+
+.accordion-body .bg{
+    background-color: #f8f8ff;
+    padding: 10px !important;
+    border-radius: 15px;
+}
+
+.accordion-body .bg div{
+    margin-bottom: 10px !important;
+}
+
+.accordion-body a{
+    text-decoration: none;
+    color: #333;
+}
+
+
+/* Modal  */
+
+
+.container-flight h1,.container-flight  h6{
+    color: #000077;
+}
+
+.container-flight .butflight{
+    background-color:#000077;
+    color: #fff;
+    padding: 7px 15px !important;
+}
+
+.container-flight li{
+    color: #fff;
+    background-color: #000077;
+}
+
+.top-nav a{
+    text-decoration: none;
+}
+
+.modal-body a{
+    text-decoration: none;
+}
+
+.we{
+    color: #000077;
+}
+.me{
+    display: flex;
+    gap: 20px;
+}
+
+.center{
+    position: relative;
+}
+
+
+
+
+
+
+  /* Balances */
+
+
+/* Screen sizes */
+@media (max-width:1024px) {
+    .side-bar{
+        display: none;
     }
-    .container-one{
-        width: 100vw;
-        height: 100vh;
-        /* padding: 30px 0px; */
+
+    .bottom-navbar{
+        display: block;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: var(--blue);
+        color: #FFF;
+    }
+
+   
+    main .main {
+        width: 100%;
+    }
+
+    nav{
+        padding: 20px 40px !important;
+    }
+
+    .center{
+        padding: 20px 40px !important;
     }
     
 
+    
 }
+
+
 @media (max-width:767px) {
-    .container-one{
-        width: 94% !important;
-        height: 60% !important;
-    }
-   
-    .container-one::before{
-        display: none !important;
-    }
-    .signUp{
-        height: 95% !important;
-    }
-    form{
-        width: 86% !important;
-    }
-    form.signup-form{
-        display: none !important;
-    }
-    .panels-container{
-        display: none !important;
-        opacity: 0 !important;
-    }
-    .container-one.sign-up-mode2 form.signup-form{
-        display: flex !important;
-        opacity:1 !important;
-      
+ 
+    nav{
+        padding: 10px !important;
     }
 
+    nav .profiles .name{
+        display: none;
+    }
 
-    .container-one.sign-up-mode2 form.signin-form{
-        display: none !important;
-       
-    }
-    .account-text{
-        display: block;
-    }
+   .center{
+    padding: 20px 30px !important;
+   }
+
+   .account-number{
+    display: flex;
+    /* flex-direction: column; */
+   }
+
+   .account-number div{
+    margin: 0 !important;
+   }
+
+   .head-card,.head-card2{
+    width: 100%;
+   }
+
+   .cards::-webkit-scrollbar{
+    display: none;
+   }
+
+   .cards{
+    flex-direction: column;
+    gap: 10px;
+   }
+
+   .more{
+    flex-direction: column;
+   }
+
+   .more .activities{
+    grid-template-columns: repeat(3,1fr);
+    gap: 15px;
+   }
+   .left,.right{
+    width: 100%;
+   }
+
+   .activities{
+    padding: 0 !important;
+   }
+
+   .head-card2{
+    padding: 0 !important;
+   }
+
+   .main nav{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: #fff;
+   }
+
+   .center{
+    margin-top: 60px !important;
+
+   }
+
+   .bottom-navbar nav{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    gap: 10px;
+    /* justify-content: space-between; */
+    padding: 10px 20px !important;
+   }
+
+   .bottom-navbar nav a{
+    color: #ffffffab;
+   }
+
+   .bottom-navbar nav i{
+    font-size: 20px;
+   }
+
+   .bottom-navbar nav p{
+    font-size: 12px;
+   }
+
+   .bottom-navbar .actives{
+    color: #fff;
+   }
+  
+   nav{
+    z-index: 100000;
+   }
+
+
+   .sets{
+    width: 100%;
+   }
+
+   .transaction-center{
+    padding: 10px !important;
+    /* margin: 0 !important; */
+    margin-top: 80px !important;
 }
+
+.transaction-container .text{
+    width: 100% !important;
+
+}
+
+.transaction-container{
+    padding: 10px !important;
+
+}
+
+.transaction-container p{
+    font-size: 13px ;
+}
+
+.transaction-container b{
+    text-align: center;
+}
+
+.transaction-balance{
+    margin-left: 30px !important;
+}
+
+}
+
